--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,8 +1,14 @@
 <div class="user-details">
+  
   <h1>HackHPC@ADMI23 Hackathon</h1>
-  <p style="text-align: justify; color: black;"> Join us virtually from <strong>June 26th - 30th, 2023</strong> for <em>HackHPC@ADMI23</em>, a team-based hackathon for undergraduates, faculty, staff, and technical specialists. As a part of the <strong><a href="https://admiusa.org/admi2023/index.php" target="_blank" style="color: black; text-decoration: none;">Association of Computer Science Departments at Minority Institutions (ADMI) Symposium on Computing at Minority Institutions</a></strong>, the event is devoted to computing issues relevant to minority students, education, and institutions. The symposium aims to explore collaborations between major research institutions, industry, and minority institutions.
+
+  
+  <p style="text-align: justify; color: black;"> Join us virtually from <strong>June 26th - 30th, 2023</strong> for <em>HackHPC@ADMI23</em>, a team-based hackathon for undergraduates, faculty, staff, and technical specialists. As a part of the <strong><a href="https://admiusa.org/admi2023/index.php" target="_blank" style="color: black; text-decoration: none;">Association of Computer Science Departments at Minority Institutions (ADMI) Symposium on Computing at Minority Institutions</a></strong>, 
+    <img src="{{ '/assets/imgs/2023admiSmallLogo-black.png' | prepend: site.baseurl}} "  style="float: left; margin: 10px;" \>
+    the event is devoted to computing issues relevant to minority students, education, and institutions. The symposium aims to explore collaborations between major research institutions, industry, and minority institutions.
 
     <em>HackHPC@ADMI23</em> offers an exciting opportunity for students to showcase their computing knowledge and skills while collaborating with industry experts and faculty mentors. The hackathon will focus on the theme "Computing for Social Good" and will provide pre-formed teams with both a faculty and technical mentor. All skill levels and fields of study undergraduate students are welcome to participate.
+    
     <br><br>
     The event will feature several pre-hackathon training sessions on high-performance computing (HPC) and cyber-infrastructure (CI) technology, as well as group mentoring techniques. Participants will have access to cutting-edge technology and infrastructure, enabling them to create innovative solutions that solve real-world problems.
     <br><br>
