--- a/_includes/about.html
+++ b/_includes/about.html
@@ -18,6 +18,7 @@
          
           <h2><a class="link" href="{{ site.registration_link }}" style="text-decoration: none; padding: 30px; background-color: goldenrod; color: black; border: 3px solid black; "><i class="icon fa fa-pencil-square" aria-hidden="true"></i> Click Here to Register </a></h2>
         {% endif %}
+       
 </div>
 <div class="user-details">
 
@@ -26,19 +27,23 @@
       <ul style="list-style-type: none;"> 
         {% for sponsor in site.data.sponsors.sponsors %}
         <li><a href="{{ sponsor.url }}" target="_blank" style="text-decoration: none; color: black;"> <strong> {{ sponsor.name }} </strong></a>
+            {% if sponsor.grant %}
+            <ul style="list-style-type: none;"> 
+              {% for grant in sponsor.grant %} 
+                <li style="color: darkgrey;"><a href="{{ grant.url }}" target="_blank"  style="text-decoration: none; color: darkgrey;"><em>
+                  {% if grant.description %}
+                  {{ grant.description }} 
+                  {% else %}
+                  Funded by: {{ grant.awardagency }}</em></a> 
+                  {% endif %}
+                </li> 
+              {% endfor %}
+            </ul>
+              
+            {% endif %}
         
         </li>
         
-<!--
-          name: "Science Gateways Community Institute | SGX3"
-          url: https://sciencegateways.org/
-          logo: /assets/imgs/logos/sfu-BigData-logo.png
-          grant:
-            - awardagenency: National Science Foundation
-              logo: /assets/imgs/logos/NSB-NSF.png 
-              url: https://www.nsf.gov/awardsearch/showAward?AWD_ID=2231406
-              description: >
--->
         {% endfor %}
 
       </ul>
