updated registration style

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,7 +16,7 @@
   </p>
   {% if site.registration_link %}
          
-          <h2><a class="link" href="{{ site.registration_link }}" style="text-decoration: none; padding: 30px; background-color: goldenrod; color: black; border: 3px solid black; "><i class="icon fa fa-pencil-square" aria-hidden="true"></i> Click Here to Register </a></h2>
+          <h2><a href="{{ site.registration_link }}" style="text-decoration: none; padding: 20px; background-color: goldenrod; color: black; border: 3px solid black; "><i class="icon fa fa-pencil-square" aria-hidden="true"></i> Click Here to Register </a></h2>
         {% endif %}
        
 </div>
