--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,8 +2,8 @@
   
   
 
-  <img src="{{ '/assets/imgs/HackHPCat ADMI23Header-black.png' | prepend: site.baseurl}} "  style="float: left;" \>
-  <p style="text-align: justify; color: black;"> Join us virtually from <strong>June 26th - 30th, 2023</strong> for <em>HackHPC@ADMI23</em>, a team-based hackathon for undergraduates, faculty, staff, and technical specialists. As a part of the <strong><a href="https://admiusa.org/admi2023/index.php" target="_blank" style="color: black; text-decoration: none;">Association of Computer Science Departments at Minority Institutions (ADMI) Symposium on Computing at Minority Institutions</a></strong>, 
+  <img src="{{ '/assets/imgs/HackHPCatADMI23Header-black.png' | prepend: site.baseurl}} "  style="float: left;" \>
+  <p style="text-align: justify; color: black;"> Join us virtually from <strong>June 26th - 29th, 2023</strong> for <em>HackHPC@ADMI23</em>, a team-based hackathon for undergraduates, faculty, staff, and technical specialists. As a part of the <strong><a href="https://admiusa.org/admi2023/index.php" target="_blank" style="color: black; text-decoration: none;">Association of Computer Science Departments at Minority Institutions (ADMI) Symposium on Computing at Minority Institutions</a></strong>, 
     
     the event is devoted to computing issues relevant to minority students, education, and institutions. The symposium aims to explore collaborations between major research institutions, industry, and minority institutions.
 
