added ices files

--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -1,6 +1,8 @@
 
 <h1 class="schedule-title">Event Calendar</h1>
-
+<p>
+  <a href="{{ "/assets/ics_files/HackHPC-ADMI23-AllSessions.ics" | prepend: site.url }}"> <i class="fas fa-calendar-plus"></i> Download Calendar File with all Event Sessions (ICS)</a>
+</p>
   <body>
 
     <!-- Before Event Sessions -->
