--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -31,9 +31,16 @@
         <div class="event-right">
           <h3 class="event-title"> {{ event.theme }}</h3>
 
-          {% if event.zoomlink %}
+          
           <p>
+            {% if event.zoomlink %}
             <a href="{{ event.zoomlink }}" style="color: blue;"><i class="fa-solid fa-video"> </i> Zoom</a>
+            {% endif %}
+
+            {% if event.icsfile %}
+            <a href="{{ event.icsfile }}" style="color: darkred;"><i class="fas fa-calendar-plus"> </i> Add to your Calendar (ICS) </a>
+
+            {% endif %}
             <add-to-calendar-button
                   name="{{ event.theme }}"
                   options="'Apple','Google','Outlook'"
@@ -45,7 +52,7 @@
                   timeZone="{{ event.date | date: '%z'}}"
                 ></add-to-calendar-button>
           </p>
-       {% endif %}
+       
 
           
 
@@ -136,10 +143,13 @@
 
           {% if event.zoomlink %}
           <p>
-            <a href="{{ event.zoomlink }}" style="color: blue;"><i class="fa-solid fa-video"> </i> Zoom</a>
-           
+            <a href="{{ event.zoomlink }}" style="color: blue; border: 1px solid blue; padding: 10px; border-radius: 8px;"><i class="fa-solid fa-video"> </i> Zoom</a>
+           {% endif %}
+           {% if event.icsfile %}
+            <a href="{{ event.icsfile }}" style="color: darkred; border: 1px solid darkred; padding: 10px; border-radius: 8px;"><i class="fas fa-calendar-plus"> </i> Add to your Calendar (ICS) </a>
+            {% endif %}
           </p>
-       {% endif %}
+       
 
           {% if event.description %}
              <p>
