--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -1,7 +1,7 @@
 
 <h1 class="schedule-title">Event Calendar</h1>
 <p>
-  <a href="{{ "/assets/ics_files/HackHPC-ADMI23-AllSessions.ics" | prepend: site.url }}"> <i class="fas fa-calendar-plus"></i> Download Calendar File with all Event Sessions (ICS)</a>
+  <a href="{{ "/assets/ics_files/HackHPC-ADMI23-AllSessions.ics" | prepend: site.baseurl }}" style="color: orangered; border: 1px solid orangered; padding: 10px; border-radius: 8px;"> <i class="fas fa-calendar-plus"></i> Download Calendar File with all Event Sessions (ICS)</a>
 </p>
   <body>
 
