--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -34,11 +34,11 @@
           
           <p>
             {% if event.zoomlink %}
-            <a href="{{ event.zoomlink }}" style="color: blue;"><i class="fa-solid fa-video"> </i> Zoom</a>
+            <a href="{{ event.zoomlink }}" style="color: blue; border: 1px solid blue; padding: 10px; border-radius: 8px;"><i class="fa-solid fa-video"> </i> Zoom</a>
             {% endif %}
 
             {% if event.icsfile %}
-            <a href="{{ event.icsfile }}" style="color: darkred;"><i class="fas fa-calendar-plus"> </i> Add to your Calendar (ICS) </a>
+            <a href="{{ event.icsfile }}" style="color: darkred; border: 1px solid darkred; padding: 10px; border-radius: 8px;"><i class="fas fa-calendar-plus"> </i> Add to your Calendar (ICS) </a>
 
             {% endif %}
             <add-to-calendar-button
