--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,8 @@ layout: articles
 heading: 'Your awesome heading'
 subheading: 'Your awesome subheading'
 banner: 'default'
+imageoverlay: "assets/images/banners/ADMI23-whiteheader-logo.svg"
+
 ---
 
 {{ content }}
