--- a/_layouts/articles.html
+++ b/_layouts/articles.html
@@ -3,6 +3,8 @@ layout: framework
 sidebar: category-list
 ---
 
+
+
 <div class="articles">
   {% if page.banner == nil %}
     {% assign banner = page.title %}
@@ -12,3 +14,5 @@ sidebar: category-list
 
   {% include views/pagination.html %}
 </div>
+
+{% include about.html %}
