--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,9 +1,10 @@
 ---
 layout: articles
-heading: 'Your awesome heading'
-subheading: 'Your awesome subheading'
+#heading: ''
+#subheading: 'Your awesome subheading'
 banner: 'default'
 imageoverlay: "assets/images/banners/ADMI23-whiteheader-logo.svg"
+
 
 ---
 
