--- a/_includes/organizers.html
+++ b/_includes/organizers.html
@@ -144,7 +144,7 @@
         <div class="event-right">
           
          <div>
-          <h2 style="margin-bottom: 1px;"> {{ organizer.name }} </h2>
+          <h2 style="margin-bottom: 1px; margin-top: 1px;"> {{ organizer.name }} </h2>
           <a href="{{ organizer.site }}" style="font-size: medium; font-weight: bold;">{{ organizer.affiliation}}</a>
           <strong>{{ organizer.aff }}</strong>  <em>{{ organizer.location }}</em> 
         </div>
