--- a/_sass/schedule/schedulestyle.scss
+++ b/_sass/schedule/schedulestyle.scss
@@ -44,7 +44,7 @@ h2.event-title {
 
 .event .event-left {
   background: #222;
-  min-width: 82px;
+  width: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
