--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -1,9 +1,17 @@
 
-<h1 class="schedule-title">Event Calendar</h1>
+<strong>Current Date and Time: </strong> <em id="timeNow"></em><br>
+<br>
 <p>
   <a href="{{ "/assets/ics_files/HackHPC-ADMI23-AllSessions.ics" | prepend: site.baseurl }}" style="color: orangered; border: 2px solid darkgrey; padding: 10px; border-radius: 8px;"> <i class="fas fa-calendar-plus"></i> Download Calendar File with all Event Sessions (ICS)</a>
 </p>
   <body>
+
+    <!-- Gets Date and Time -->
+    <script>
+      const el = document.getElementById(`timeNow`);
+      el.textContent = new Date();
+    </script>
+
 
     <!-- Before Event Sessions -->
     {% if site.data.schedule.preevent_schedule %}
