added sponsors and charlie

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,7 @@ layout: articles
 #subheading: 'Your awesome subheading'
 banner: 'default'
 imageoverlay: "assets/images/banners/ADMI23-whiteheader-logo.svg"
+sidebar: sponsor_sidebar.html
 
 
 ---
