--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -67,5 +67,6 @@ $on-laptop:        800px !default;
   "misc/google-translate",
   "misc/gitment",
   "misc/click-to-top",
-  "schedule/schedulestyle"
+  "schedule/schedulestyle",
+  "supporters/supporters"
 ;
