--- a/_includes/resources.html
+++ b/_includes/resources.html
@@ -4,7 +4,7 @@
    
   </section>
  
-  Jump To:  <a href="#sessions" target="_self"> Sessions</a> | <a href="#references" target="_self"> References </a> | <a href="#datasets" target="_self"> Datasets</a> | <a href="#dashboards" target="_self"> Dashboards </a>
+  Jump To:  <a href="#sessions" target="_self"> Sessions</a> | <a href="#references" target="_self"> References </a> | <a href="#uiuxdesign" target="_self"> UI/UX</a> | <a href="#codeplatforms" target="_self"> Code Platforms</a> | <a href="#datasets" target="_self"> Datasets</a> | <a href="#dashboards" target="_self"> Dashboards </a>
   <br>
   <br>
   <h1 id="sessions" style="color:#013366;"><i class="fas fa-chalkboard-teacher" style="font-size: x-large;"></i> Sessions:</h1>
@@ -31,13 +31,47 @@
   </ol>
 
   <hr>
+  <h1 id="hackathon" style="color:#013366;"><i class="fa-solid fa-person-chalkboard" style="font-size: x-large;"></i> Hackathon:</h1>
+  {% for ref in site.data.references.hackathon %}
+    <ul class="presentations-list">
+      <li><b>{{ ref.name }}</b> - <a href="{{ ref.url }}" target="_blank">{{ ref.url }}</a> </li>
+    </ul>
+  {% endfor %}
+
+
+  <hr>
   <h1 id="references" style="color:#013366;"><i class="fas fa-book-reader" style="font-size: x-large;"></i> References:</h1>
   {% for ref in site.data.references.references %}
     <ul class="presentations-list">
       <li><b>{{ ref.name }}</b> - <a href="{{ ref.url }}" target="_blank">{{ ref.url }}</a> </li>
     </ul>
   {% endfor %}
+
+
+  <hr>
+  <h1 id="uiuxdesign" style="color:#013366;"><i class="fas fa-laptop-code" style="font-size: x-large;"></i> UI/UX:</h1>
+  {% for ref in site.data.references.uiuxdesign %}
+    <ul class="presentations-list">
+      <li><b>{{ ref.name }}</b> - <a href="{{ ref.url }}" target="_blank">{{ ref.url }}</a> </li>
+    </ul>
+  {% endfor %}
   
+  <hr>
+  <h1 id="codeplatforms" style="color:#013366;"><i class="fa-solid fa-code" style="font-size: x-large;"></i> Coding Platforms:</h1>
+  {% for ref in site.data.references.codeplatforms %}
+    <ul class="presentations-list">
+      <li><b>{{ ref.name }}</b> - <a href="{{ ref.url }}" target="_blank">{{ ref.url }}</a> </li>
+    </ul>
+  {% endfor %}
+ 
+  <hr>
+  <h1 id="computinghosting" style="color:#013366;"><i class="fa-solid fa-server" style="font-size: x-large;"></i> Computation/Hosting:</h1>
+  {% for ref in site.data.references.computinghosting %}
+    <ul class="presentations-list">
+      <li><b>{{ ref.name }}</b> - <a href="{{ ref.url }}" target="_blank">{{ ref.url }}</a> </li>
+    </ul>
+  {% endfor %}
+ 
   <hr>
   <h1 id="datasets" style="color:#013366;"><i class="fas fa-database" style="font-size: x-large;"></i> Datasets:</h1>
   {% for ref in site.data.references.datasets %}
