added teams horizontal

--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -68,5 +68,6 @@ $on-laptop:        800px !default;
   "misc/gitment",
   "misc/click-to-top",
   "schedule/schedulestyle",
-  "supporters/supporters"
+  "supporters/supporters",
+  "teams/teams-h"
 ;
