--- a/_includes/views/footer.html
+++ b/_includes/views/footer.html
@@ -11,7 +11,17 @@
             | replace: '(p)', '℗'
             | replace: '(cleft)', '<span class="copyleft">&copy;</span>'
         -%}
-      <div>{{ copyright }}</div>
+          <div><strong>HackHPC@AMDI23 supported by:</strong></div>
+          <div style="width: 30%;">
+            {% for sponsor in site.data.sponsors.sponsors %}
+              {% if forloop.last == true %}
+              <a href="{{ sponsor.url }}"> {{ sponsor.name }} </a>  
+              {% else %}
+              <a href="{{ sponsor.url }}"> {{ sponsor.name }}</a> |
+              {% endif %}
+            {% endfor %}
+          </div>
+        <div>{{ copyright }}</div>
       <div>Powered by <a title="Jekyll is a simple, blog-aware, static site
       generator." href="https://jekyllrb.com/">Jekyll</a> &amp; <a title="Yat, yet
       another theme." href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a>.</div>
