--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,10 @@
 layout: articles
 #heading: ''
 #subheading: 'Your awesome subheading'
-banner: 'default'
+banner:
+  image: "/assets/imgs/HackHPCatADMI23-ai-logo.jpeg"
+  height: "25vh"
+bannerimgoverlay: "/assets/images/banners/ADMI23-whiteheader-logo.svg"
 imageoverlay: "assets/images/banners/ADMI23-whiteheader-logo.svg"
 sidebar: sponsor_sidebar.html
 
