--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,12 +1,13 @@
 
   
-  
-<div style="text-align: center;">
-<img width= 80% src="{{ "assets/images/HackHPCatADMI23-participants.gif" | img_url }}" > <br> <br>
-</div>
+
+
+
+<h2>About the HackHPC@ADMI23 Hackathon</h2>
+
   <p> Join us virtually from <strong>June 26th - 29th, 2023</strong> for <em>HackHPC@ADMI23</em>, a team-based hackathon for undergraduates, faculty, staff, and technical specialists. As a part of the <strong><a href="https://admiusa.org/admi2023/index.php" target="_blank" style="text-decoration: none;">Association of Computer Science Departments at Minority Institutions (ADMI) Symposium on Computing at Minority Institutions</a></strong>, 
     
-    the event is devoted to computing issues relevant to minority students, education, and institutions. The symposium aims to explore collaborations between major research institutions, industry, and minority institutions.
+    <img style="float: left; padding: 10px;" width = 60% src="{{ "assets/images/HackHPCatADMI23-participants.gif" | img_url }}" >  the event is devoted to computing issues relevant to minority students, education, and institutions. The symposium aims to explore collaborations between major research institutions, industry, and minority institutions.
 
     <em>HackHPC@ADMI23</em> offers an exciting opportunity for students to showcase their computing knowledge and skills while collaborating with industry experts and faculty mentors. The hackathon will focus on the theme "Computing for Social Good" and will provide pre-formed teams with both a faculty and technical mentor. All skill levels and fields of study undergraduate students are welcome to participate.
     
@@ -22,7 +23,9 @@
          </div>
           {% endif %}
        
-<br>
+
+{% include teams_horz.html %}
+
 <div style="text-align: center;">
 
   <h2>Sponsors</h2>
@@ -53,6 +56,7 @@
     {% endif %}
 
 </div>
+
 
 
 
