--- a/_includes/views/footer.html
+++ b/_includes/views/footer.html
@@ -11,7 +11,20 @@
             | replace: '(p)', '℗'
             | replace: '(cleft)', '<span class="copyleft">&copy;</span>'
         -%}
-          <div><strong>HackHPC@AMDI23 supported by:</strong></div>
+  
+        
+        
+        <div>
+          <a style="color: black;" href="http://hackhpc.org"><strong>HackHPC.org</strong></a>
+          <a href="mailto:{{ site.email }}"><i class="fa-solid fa-envelope"></i></a>
+          <a href="https://twitter.com/{{ site.twitter_username }}"><i class="fa-brands fa-twitter"></i></a>
+          <a href="https://www.instagram.com/{{ site.instagram_username }}"><i class="fa-brands fa-instagram"></i></a>
+          <a href="{{ site.linkedin_username }}"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://github.com/{{ site.github_username }}"><i class="fa-brands fa-github"></i></a>
+          <a href="{{ site.youtube_page }}"><i class="fa-brands fa-youtube"></i></a>
+
+        </div>  
+        <div><strong>HackHPC@AMDI23 supported by:</strong></div>
           <div style="width: 30%;">
             {% for sponsor in site.data.sponsors.sponsors %}
               {% if forloop.last == true %}
