--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -195,7 +195,7 @@ html {
   background-color: $footer-background-color;
   text-align: left;
   transition: background-color 0.2s;
-  background-image: url("/admi23/assets/imgs/HackHPCatADMI23-ai-logo.jpeg");
+  background-image: url("/admi23/assets/imgs/HackHPCatADMI23Header-black.png");
   background-repeat: no-repeat;
   background-position: right;
 
