fixed img overlay sizing

--- a/_includes/views/banner.html
+++ b/_includes/views/banner.html
@@ -113,7 +113,7 @@
           
           {% if imageoverlay != null and imageoverlay != "" %}   
           
-            <img src="{{ imageoverlay | relative_url }}" style="width: 70%; display: block; margin: auto;" > 
+            <img src="{{ imageoverlay | relative_url }}" style="height: 98%; display: block; margin: auto;" > 
           {% endif %}
 
           </div>
