adjusted banner dynamic font size

--- a/_includes/views/banner.html
+++ b/_includes/views/banner.html
@@ -133,7 +133,7 @@
         {%- else -%}
 
           <div class="page-banner-default">
-            <h1 style="font-size: 120px; text-shadow: #222 1px 0 10px;"    class="page-banner-heading">
+            <h1 style="font-size: 5vw; text-shadow: #222 1px 0 10px;"    class="page-banner-heading">
               {% if imageoverlay != null and imageoverlay != "" %}
               
               {% else %}
