--- a/_sass/teams/teams-h.scss
+++ b/_sass/teams/teams-h.scss
@@ -5,6 +5,7 @@
     background-color: darkgray;
     border-radius: 8px;
     border: 1px solid slategrey;
+    background-image: url( "https://hackhpc.github.io/admi23/assets/imgs/HackHPCatADMI23-ai-logo-boardonly.jpeg" );
 }
    
 
