--- a/_sass/teams/teams-h.scss
+++ b/_sass/teams/teams-h.scss
@@ -16,7 +16,7 @@
   padding: 7px;
   border-radius: 8px;
   text-align: center;
-  background-color: lightgray;
+  background-color: lightsalmon;
   width: auto;
 }
 
@@ -53,7 +53,8 @@
 }
 
 .teams-h-container a.teams-h {
-    color: slateblue;
+    #color: slateblue;
+    color: black;
 }
 
 .teams-h-container p.teams-h {
