--- a/_sass/teams/teams-h.scss
+++ b/_sass/teams/teams-h.scss
@@ -21,8 +21,8 @@
 }
 
 .teams-h-container:hover {
-    box-shadow: 2px 2px -4px 2px orangered;
-    border: 3px solid orangered;
+    box-shadow: 2px 2px -4px 2px slategray;
+    border: 3px solid slategray;
   }
 
 
